--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -20,9 +20,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name : Install Docker Compose
-        run: |
-          sudo apt update && sudo apt upgrade -y
-          sudo apt install -y docker-compose
+        run: sudo apt install -y docker-compose
 
       - name: Build and Start ONLY Backend Service
         run: docker-compose up --build -d backend
