--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,9 +6,11 @@ djangorestframework==3.16.1
 dotenv==0.9.9
 drf-spectacular==0.29.0
 environ==1.0
+gunicorn==23.0.0
 inflection==0.5.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+packaging==25.0
 python-dotenv==1.2.1
 PyYAML==6.0.3
 referencing==0.37.0
