--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "react-use-websocket": "^4.13.0",
     "vite-plugin-svgr": "^4.5.0"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "terser-brunch": "^4.1.0",
     "vite": "^7.1.7"
   }
 }
