Refactor session handling: remove unused websocket consumer, enhance story closing logic, and add voting functionality with reset option

--- a/frontend/.vscode/launch.json
+++ b/frontend/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,7 +6,17 @@
             "request": "launch",
             "name": "Launch Edge against localhost",
             "url": "http://localhost:5173",
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${workspaceFolder}",
+            "skipFiles": [
+                "<node_internals>/**",
+                "${workspaceFolder}/node_modules/**",
+                "${workspaceFolder}/dist/**"
+            ],
+            "sourceMaps": true,
+            "smartStep": true,
+            "sourceMapPathOverrides": {
+                "webpack:///*": "${workspaceFolder}/*"
+            }
         }
     ]
 }
