--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -30,10 +30,8 @@ jobs:
 
       - name: Installation des dépendances
         working-directory: ./backend
-        run: 
-          pip install --upgrade pip
-          pip install -r requirements.txt
-
+        run: pip install -r requirements.txt
+        
       - name: Lancement des tests (Pytest)
         working-directory: ./backend
         env:
@@ -81,9 +79,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Installation des outils (Doxygen + Graphviz)
-        run: 
-          sudo apt-get update
-          sudo apt-get install -y doxygen graphviz
+        run: sudo apt install -y doxygen graphviz
 
       - name: Génération de la documentation
         working-directory: ./backend
